<!--
  ~ Copyright (c) 2018 Henna Singh
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Book Lovers</string>
    <string name="book_heading">Book Lovers Cafe</string>
    <string name="enter_book_name">Enter Book Name</string>
    <string name="enter_book_title">Enter Book Title</string>

    <string name="error_empty_string">You did not enter any Book Title</string>
    <string name="error_no_connection">No internet connection.</string>
    <string name="info_no_books">No matching books found. Go Back and Search for a different one</string>
    <string name="book_list_label">Book Listing</string>
    <string name="placeholder_title">Book Title is Android Concepts</string>
    <string name="placeholder_author">Book Author is Big Nerd Ranch</string>
    <string name="placeholder_publisher">Published by Blah and Blah</string>
    <string name="published_date">published on 21 Aug 2015</string>
    <string name="no_browser_msg">You dont have a browser installed to open the link</string>
    <string name="image_contentD">Image of the Book</string>
    <string name="enter_author_name">Enter Author Name</string>
    <string name="search_button">search button</string>
    <string name="search">Search</string>
    <string name="invalid_author">Its Optional, dont worry ;)</string>
    <string name="invalid_title">Book Title is Required</string>
    <string name="no_title">No Title Available</string>
    <string name="no_author">No Author Found</string>
    <string name="no_publisher">No Publisher Found</string>
    <string name="no_price">Price not available</string>
</resources>
