<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pile_books"
    tools:context="artist.web.bookdiscovery.MainActivity">

    <TextView
        android:id="@+id/book_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/heading_marginT"
        android:textSize="@dimen/heading_text_size"
        android:textStyle="bold"
        android:textColor="@color/book_heading"
        android:text="@string/book_heading" />

    <TextView
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_heading"
        android:layout_marginTop="120dp"
        android:text="@string/enter_book_name"
        android:gravity="center"
        android:textSize="@dimen/enter_text_size"
        android:textColor="@color/enter_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_name"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/linear_marginT">

     <EditText
        android:id="@+id/book_title"
        android:layout_width="0dp"
         android:layout_weight="4"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_marginL"
        android:layout_marginRight="@dimen/edit_marginR"
         android:hint="@string/enter_book_title"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/search_marginR"
        android:layout_alignEnd="@id/book_title"
        android:background="@drawable/search_icon"/>

    </LinearLayout>

</RelativeLayout>
