<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Henna Singh
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/pile_books">

        <TextView
            android:id="@+id/book_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/book_heading"
            android:textColor="@color/book_heading"
            android:gravity="center_horizontal"
            android:textSize="@dimen/heading_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="100dp"
            android:background="@color/colorBG"
            android:orientation="vertical">

        <TextView
            android:id="@+id/enter_name"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center"
            android:text="@string/enter_book_name"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBG"
            android:textSize="@dimen/enter_text_size"/>

        <artist.web.bookdiscovery.EditTextCustomView
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="@string/enter_book_title"
            android:inputType="text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/enter_author"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/enter_author_name"
            android:textColor="@color/colorBG"
            android:background="@color/colorPrimary"
            android:textSize="@dimen/enter_text_size"/>

        <artist.web.bookdiscovery.EditTextCustomView
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="@string/enter_author_name"
            android:inputType="text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableEnd="@drawable/search_icon"
            android:onClick="showSearchResults"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/search"
            android:textColor="@color/colorBG"
            android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
</layout>